# calcloud

./: .gitignore  Dockerfile  LICENSE  README.md  build-image  changelog.md  create_jobs.py  example_datasets.list  install-fitscut  pyproject.toml  setup.cfg  setup.py  submit_dags.py  tox.ini
ami_rotation/: ami_rotation_userdata.sh  parse_image_json.py
batch-notes/: README.md  airflow.notes  compute-environments.json  ec2-launch-template.json  job-definitions.json  job-queues.json  sample.ids  sample.plan
calcloud/: batch.py  common.py  dynamodb.py  exit_codes.py  hst.py  io.py  lambda_handler.py  lambda_submit.py  log.py  messaging.py  metrics.py  model_ingest.py  plan.py  provision.py  requirements.txt  s3.py  simpledb.py  submit.py  sync.py  timing.py
hstdp-container/: Dockerfile  build  push
hstdputils/: create_previews.py  log.py  plan.py  process.py  s3.py  submit.py
lambda_runtime_environment/: lambda_function.py  notes.txt  process.py
modeling/: Dockerfile  ingest.py  io.py  main.py  prep.py  requirements.txt  train.py  validate.py
mothball/: messaging.py  pipeline_config.yaml
notes/: README.md  batch-2020-07-06T14-56-29.yaml  compute-environments.json  ec2-launch-template.json  job-definitions.json  job-queues.json  lambda.function.configuration.json  lambda.function.json
scripts/: README.md  calacs_wrapper.sh  calcloud-reset  calcos_wrapper.sh  calstis_wrapper.sh  calwfc3_wrapper.sh  check_batch_jobs.py  check_batch_jobs_no_admin.py  docker-aws-login  dynamo_import.py  dynamo_scrape.py  fix-certs  hstdp-process  hstdputils-cal-env  hstdputils-create-previews  hstdputils-docker-run-container  hstdputils-docker-run-pipeline  hstdputils-get-output-path  hstdputils-onsite-process  hstdputils-remote-process  hstdputils-s3-env  (+4 more)
(+263 files in other folders)
