[metadata]
name = calcloud
provides = calcloud
package_name = calcloud
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = HST reprocessing infrastructure used to run CALDP containers on AWS
long_description = file: README.md
url = https://github.com/spacetelescope/calcloud
github_project = spacetelescope/calcloud

[options]
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools >=41.0.1
install_requires =
    boxsdk[jwt] >=2.5.0, <3
    boto3

[options.extras_require]
dev =
    black  ==20.8b1
    flake8
    pytest >=5.0.1, <6
    pytest-cov >= 2.7.1, <3
    tox >=3.13.2, <4
    bandit

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg
per-file-ignores = ./lambda/JobPredict/predict_handler.py:F401
[tool:pytest]
testpaths = tests
