[metadata]
name = calcloud
provides = calcloud
package_name = calcloud
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = HST reprocessing infrastructure used to run CALDP containers on AWS
long_description = file: README.md
url = https://github.com/spacetelescope/calcloud
github_project = spacetelescope/calcloud

[options]
packages = find:
python_requires = ~=3.7.0
setup_requires =
    setuptools >=41.0.1
install_requires =
    boto3
    botocore == 1.23.20
    pyyaml

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-cov
    pytest-doctestplus
    tox
    bandit
    moto[all]
    docker

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg
[tool:pytest]
testpaths = tests
